--- a/package.json
+++ b/package.json
@@ -15,5 +15,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7"
   },
-  "engines" : { "node" : "12.14.1" }
+  "engines": {
+    "node": "12.14.1"
+  }
 }
